WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45536
[Qt] MiniBrowser crashes with multiply windows when closing one of them
https://bugs.webkit.org/show_bug.cgi?id=45536
Summary
[Qt] MiniBrowser crashes with multiply windows when closing one of them
Balazs Kelemen
Reported
2010-09-10 06:00:35 PDT
It seems to be that we had taken the wrong assumption that there are only one window with one page, therefore there are two ownership related problem that breaks MiniBrowser when there are multiply windows and the user closing one of them.
Attachments
proposed patch
(2.38 KB, patch)
2010-09-10 06:28 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2010-09-10 06:28:04 PDT
Created
attachment 67175
[details]
proposed patch
Andreas Kling
Comment 2
2010-09-10 09:24:21 PDT
Comment on
attachment 67175
[details]
proposed patch LGTM
WebKit Commit Bot
Comment 3
2010-09-10 18:57:14 PDT
Comment on
attachment 67175
[details]
proposed patch Clearing flags on attachment: 67175 Committed
r67266
: <
http://trac.webkit.org/changeset/67266
>
WebKit Commit Bot
Comment 4
2010-09-10 18:57:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug