2010-09-10  Balazs Kelemen  <kb@inf.u-szeged.hu>

Reviewed by Andreas Kling.

        [Qt] MiniBrowser crashes with multiply windows when closing one of them
        https://bugs.webkit.org/show_bug.cgi?id=45536

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::~QWKPage): Do not call WKPageTerminate since this is designed
        to terminate the web process. We are correctly detaching the page without
        this call anyway.
2010-09-10  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Andreas Kling.

        [Qt] MiniBrowser crashes with multiply windows when closing one of them
        https://bugs.webkit.org/show_bug.cgi?id=45536

        * MiniBrowser/qt/BrowserView.cpp:
        (BrowserView::BrowserView): Reference the context instead of adopting it
        because it can be shared across different views.

Canonical link: https://commits.webkit.org/57998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67266 268f45cc-cd09-0410-ab3c-d52691b4dbfc